--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="assets/logo.png" alt="AfetSonar Logo" class="logo-img">
         <div>
           <div style="font-weight:700">AFETSONAR</div>
-          <div style="font-size:12px;color:var(--muted)">Başakşehir | 2025</div>
+          <div style="font-size:12px;color:var(--muted)">Afetsonar | 2025</div>
         </div>
       </div>
 
