--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="assets/logo.png" alt="AfetSonar Logo" class="logo-img">
         <div>
           <div style="font-weight:700">AFETSONAR</div>
-          <div style="font-size:12px;color:var(--muted)">Afetsonar | 2025</div>
+          <div style="font-size:12px;color:var(--muted)">Başakşehir Living Lab Participant Project 2025</div>
         </div>
       </div>
 
@@ -28,28 +28,8 @@
       </nav>
     </header>
 
-    <!-- HERO VIDEO -->
-    <section id="top" class="hero">
-      <div class="videos">
-
-        <div class="card">
-          <h3>What is AFETSONAR?</h3>
-
-          <div class="video-responsive">
-            <iframe 
-              src="https://www.youtube.com/embed/wych9Q8yYzI"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen>
-            </iframe>
-          </div>
-
-        </div>
-
-      </div>
-
-      <small>Project Introduction Video</small>
-    </section>
-    <!-- /HERO -->
+    <!-- Invisible anchor for "Home" link (no video section anymore) -->
+    <div id="top"></div>
 
     <section id="about">
       <h2>About Us</h2>
@@ -178,7 +158,7 @@
       </div>
 
       <div style="text-align:right">
-        <small>© 2025 | AFETSONAR </small>
+        <small>© 2025 AFETSONAR | Başakşehir Living Lab Participant Project</small>
       </div>
     </footer>
 
